--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<html>
+<head>
+<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" >
+<title>
+Ecuaciones diferenciales...
+</title>
+</head>
+<body>
+<center><img src="jaimedibujo.jpg" height="200" width="200"/></center>
+<h2><center>Ecuaciones diferenciales para estudiantes de Ciencias e Ingenierías</center></h2>
+<p><center>Graciano Calderón, Jaime Arango, Adriana Gómez</center></p>
+<center><a href="erratas2014.pdf">Fé de erratas</a></center>
+</body>
+</html>
+
