--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@ Ecuaciones diferenciales...
 </title>
 </head>
 <body>
+   <table style="width:100%">
+  <tr>
+    <td><img src="jaimedibujo.jpg" height="200" width="200"/></td>
+    <td><img src="portada.jpg" height="300" width="200"/></td>
+  </tr>
+</table> 
 <center><img src="jaimedibujo.jpg" height="200" width="200"/></center>
 <center><img src="portada.jpg" height="300" width="200"/></center>
 <h2><center>Ecuaciones diferenciales para estudiantes de Ciencias e Ingenierías</center></h2>
