--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@ Ecuaciones diferenciales...
 </title>
 </head>
 <body>
-   <table style="width:75%">
+   <center><table style="width:75%">
   <tr>
     <td><img src="portada.jpg" height="300" width="200"/></td>
      <td><img src="jaimedibujo.jpg" height="200" width="200"/></td>
   </tr>
-</table> 
+      </table></center>
 <h2><center>Ecuaciones diferenciales para estudiantes de Ciencias e Ingenierías</center></h2>
 <p><center>Graciano Calderón, Jaime Arango, Adriana Gómez</center></p>
 <center><a href="erratas2014.pdf">Fé de erratas</a></center>
