--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@ Ecuaciones diferenciales...
   <tr>
     <td><img src="portada.jpg" height="300" width="200"/></td>
      <td><img src="jaimedibujo.jpg" height="250" width="250"/></td>
+     <td><table style="width:50%">
+        <tr>Graciano Calderón</tr>
+        <tr>Jaime arango</tr>
+        <tr>Adriana Gómez</tr></td></table>
   </tr>
       </table></center>
 <p><center>Graciano Calderón, Jaime Arango, Adriana Gómez</center></p>
