--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ Ecuaciones diferenciales...
      <td><img src="jaimedibujo.jpg" height="250" width="250"/></td>
      <td><table style="width:50%">
         <tr>Graciano Calderón</tr>
-        <tr>Jaime arango</tr>
-        <tr>Adriana Gómez</tr></td></table>
+        <tr>Jaime Arango</tr>
+        <tr>Adriana Gómez</tr></table></td>
   </tr>
       </table></center>
 <p><center>Graciano Calderón, Jaime Arango, Adriana Gómez</center></p>
