--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@ Ecuaciones diferenciales...
      <td><table style="width:50%">
         <tr>Graciano Calderón</tr>
         <tr>Jaime Arango</tr>
-        <tr>Adriana Gómez</tr></table></td>
+        <tr>Adriana Gómez</tr>
+        </table>
+     </td>
   </tr>
       </table></center>
 <p><center>Graciano Calderón, Jaime Arango, Adriana Gómez</center></p>
