--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ Ecuaciones diferenciales...
   <tr>
     <td><img src="portada.jpg" height="300" width="200"/></td>
      <td><img src="jaimedibujo.jpg" height="250" width="250"/></td>
-     <td><table style="width:50%">
-        <tr>Graciano Calderón</tr>
-        <tr>Jaime Arango</tr>
-        <tr>Adriana Gómez</tr>
-        </table>
+     <td><ul>
+        <li>Graciano Calderón</li>
+        <li>Jaime Arango</li>
+        <li>Adriana Gómez</li>
+        </ul>
      </td>
   </tr>
       </table></center>
