--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@ Ecuaciones diferenciales...
   <tr>
     <td><img src="portada.jpg" height="300" width="200"/></td>
      <td><img src="jaimedibujo.jpg" height="250" width="250"/></td>
-     <td><ul>
-        <li>Graciano Calderón</li>
-        <li>Jaime Arango</li>
-        <li>Adriana Gómez</li>
-        </ul>
-     </td>
   </tr>
       </table></center>
+  <a href=
+     "http://programaeditorialunivalle.com/libro-ecuaciones-diferenciales-para-estudiantes-de-ciencias-e-ingenierias-matematica.html">
+    Programa Editorial Universidad del Valle</a>
 <p><center>Graciano Calderón, Jaime Arango, Adriana Gómez</center></p>
 <center><a href="erratas2014.pdf">Fé de erratas</a></center>
 <p><center><font size="4" color="#F304DB">página en construcción</font></center></p>
