--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ Ecuaciones diferenciales...
      <td><img src="jaimedibujo.jpg" height="250" width="250"/></td>
   </tr>
       </table></center>
-  <a href=
+ <center><a href=
      "http://programaeditorialunivalle.com/libro-ecuaciones-diferenciales-para-estudiantes-de-ciencias-e-ingenierias-matematica.html">
-    Programa Editorial Universidad del Valle</a>
+    Programa Editorial Universidad del Valle</a></center>
 <p><center>Graciano Calderón, Jaime Arango, Adriana Gómez</center></p>
 <center><a href="erratas2014.pdf">Fé de erratas</a></center>
 <p><center><font size="4" color="#F304DB">página en construcción</font></center></p>
